<package>
	<name>grvc_mbzirc_vision</name>
	<version>1.0.0</version>
	<description>
		Vision package for MBZIRC competition
	</description>
	<maintainer email="todo@todo.com">GRVC University of Seville</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin </buildtool_depend>

	<build_depend>roscpp </build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>roscpp </run_depend>
	<run_depend>message_runtime</run_depend>
</package>
